Fix image path, fix app/index url

--- a/index.html
+++ b/index.html
@@ -328,7 +328,7 @@
         <div class="container">
             <a href="#" class="logo serif">Daily Muse</a>
             <div class="nav-links">
-                <a href="/landing/index.html" class="btn btn-primary">Start Creating</a>
+                <a href="./app/index.html" class="btn btn-primary">Start Creating</a>
             </div>
         </div>
     </nav>
@@ -337,7 +337,7 @@
         <div class="animate-enter">
             <h1 class="serif">Your daily dose of<br><span>serendipity.</span></h1>
             <p>Blend your mood, the weather, and a touch of luck to generate meaningful art and literature. A moment of pause in a busy world.</p>
-            <a href="/landing/index.html" class="btn btn-primary">Try Beta Access</a>
+            <a href="./app/index.html" class="btn btn-primary">Try Beta Access</a>
         </div>
 
         <div class="hero-showcase animate-enter delay-2">
@@ -414,7 +414,7 @@
         <div class="container">
             <h2 class="serif">Find your moment.</h2>
             <p style="margin-bottom: 30px; color: var(--text-muted);">Join the daily ritual of art and literature.</p>
-            <a href="/landing/index.html" class="btn btn-primary" style="padding: 16px 40px; font-size: 1.1rem;">Launch Daily Muse</a>
+            <a href="./app/index.html" class="btn btn-primary" style="padding: 16px 40px; font-size: 1.1rem;">Launch Daily Muse</a>
         </div>
     </section>
 
