--- a/index.html
+++ b/index.html
@@ -372,7 +372,7 @@
                 <p>Select from <strong>Oil Painting</strong>, <strong>Realistic</strong>, or <strong>Illustration</strong> styles. We match the visual texture to the emotional weight of the words. Every pixel is purposeful.</p>
             </div>
             <div class="art-stage" style="background-color: #E8E6E1;">
-                <img src="assets/daily-muse-2025-12-13.png" class="floating-card" style="transform: rotate(2deg);" alt="Leonard Cohen Quote">
+                <img src="assets/daily-muse-2.png" class="floating-card" style="transform: rotate(2deg);" alt="Leonard Cohen Quote">
             </div>
         </div>
     </section>
